# matryoshka-inference

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml
data/tasks/: diverse_ab.jsonl  synthetic.jsonl  synthetic_long.jsonl
docs/: ab_findings.md  ablation_results.md  dspark_integration_results.md  final_report.md  hermes_real_test.md  next_steps_results.md  ornith_moe_real_test.md  orthrus_phase1_results.md  orthrus_phase4_results.md  orthrus_phase5_4_layerskip.md  orthrus_phase5_results.md  phase6_gemma_port_memo.md  spec_phase1_results.md  spec_phase2_results.md
examples/: long_contract.txt  technical_config.txt
results/dspark_integration/: results.jsonl  results_paired.jsonl
results/faultin_ornith/: results.jsonl
results/ornith_long_10/: results.jsonl
results/orthrus_phase1/: results.jsonl
results/orthrus_phase1_4b/: results.jsonl
results/orthrus_phase1_8b/: results.jsonl
results/orthrus_phase5/: results.jsonl
results/phase4_4b_ar_full/: results.jsonl
results/phase4_4b_diffusion_full/: results.jsonl
results/spec_phase2/: benchmark.json  capability.json  correctness.json  environment.json
results/spec_phase2/raw_responses/: text_spec.txt  token_baseline.txt
scripts/: make_long_dataset.py  spec_build_fixtures.py  spec_phase2_results.py
src/sclab/: __init__.py  __main__.py  ab.py  cli.py  dashboard.py  hardware.py  proxy.py  server.py  telemetry.py  tokenization.py
src/sclab/benchmarks/: __init__.py  datasets.py  reporting.py  runner.py  scoring.py
src/sclab/compressors/: __init__.py  base.py  extractive.py  fact_table.py  gzip_control.py  hybrid.py  oracle.py  raw.py  semantic_brief.py
src/sclab/runtimes/: __init__.py  base.py  fake.py  llamacpp.py  mlx.py  ollama.py  orthrus_engine.py  orthrus_mlx.py
src/sclab/spec/: __init__.py  backend.py  bench.py  llamacpp_backend.py  loop.py  memory.py  sim.py  token_verify.py  verify.py
src/sclab/utils/: jsonl.py  numbers_dates.py  text_split.py  timing.py
tests/: test_compressors.py  test_jsonl.py  test_ollama_runtime.py  test_orthrus_engine.py  test_proxy.py  test_runtime_contracts.py  test_scoring.py  test_server_helpers.py  test_server_proxy.py  test_spec_alignment.py  test_spec_capability_strict.py  test_spec_loop.py  test_spec_memory.py  test_spec_realengine.py  test_spec_token_verify.py  test_spec_verify.py  test_telemetry.py
tests/fixtures/: llamacpp_python_echo_shift.json
