[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matryoshka-inference"
version = "0.1.0"
description = "Lossless local LLM acceleration on Apple Silicon: semantic prompt compression + verified speculative (dual-view diffusion) decoding, with honest benchmarks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "rich>=13.0",
  "requests>=2.31",
  "psutil>=5.9",
  "numpy>=1.24",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
# The Orthrus MLX decode path (Apple Silicon). Torch is NOT required.
orthrus = [
  "mlx>=0.31.2",
  "transformers>=4.44",
  "huggingface_hub",
  "jinja2",
  "safetensors",
  "sentencepiece",
]
dev = ["pytest>=8.0"]

[project.scripts]
sclab = "sclab.cli:main"

[project.urls]
Homepage = "https://github.com/RT123-new/matryoshka-inference"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sclab.vendor.orthrus" = ["LICENSE.orthrus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
